# OpinionLens

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.local.yaml  docker-compose.yaml  dvc.yaml  env  env.build  env.stage  params.yaml  pyproject.toml
.dvc/: config
configs/grafana/dashboards/: dashboards.yaml  fastapi_dashboard.json  inference_dashboard.json
configs/grafana/datasources/: datasources.yaml
configs/mlflow/: Dockerfile  basic_auth.ini.example  entrypoint.sh
configs/postgres/: init.sh
configs/prometheus/: prometheus.yaml
configs/traefik/: traefik.yaml
data/: .gitignore
data/raw/: .gitignore  Airline Tweets.dvc  Amazon Food Reviews.dvc  Amazon Reviews.dvc  IMDB Dataset.dvc
frontend/: index.html
infra/mlflow/: Dockerfile
infra/traefik/: traefik.yaml
src/opinionlens/: __init__.py
src/opinionlens/api/: __init__.py  exceptions.py  inference.py  info.py  instruments.py  main.py  managers.py  middlewares.py  models.py
src/opinionlens/api/routers/: private.py
src/opinionlens/app/: __init__.py  dependencies.py  info.py  main.py  managers.py  middleware.py  models.py
src/opinionlens/app/routers/: api.py  inference.py  models.py
src/opinionlens/common/: settings.py  utils.py
src/opinionlens/preprocessing/: __init__.py  eval.py  tokenize.py  utils.py  vectorize.py
src/opinionlens/preprocessing/scripts/: preprocess_data.py  vectorize_data.py
src/opinionlens/scripts/: push_objects.py  register_model.py
src/opinionlens/training/: __init__.py  baselines.py  evals.py  register_model.py  sklearn_subjects.py  train_sklearn.py  tune_sklearn.py  utils.py
src/preprocessing/: __init__.py  clean.py  script.py  tokenize.py  utils.py  vectorize.py
src/preprocessing/scripts/: preprocess_data.py  vectorize_data.py
src/training/: __init__.py  baselines.py  register_model.py  sklearn_models.py  sklearn_subjects.py  train_sklearn.py  tune_sklearn.py  utils.py
static/css/: styles.css
static/html/: admin.html  base.html  index.html
static/js/: admin.js  script.js
tests/: __init__.py  api.py  conftest.py  load_test.py  simple_inference.py
