[project]
name = "OpinionList"
version = "0.0.1"
description = "AI-powered sentiment analysis with reproducible models and scalable deployment."
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "fastapi>=0.123.5",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "mlflow>=3.6.0",
    "nltk>=3.9.2",
    "omegaconf>=2.3.0",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "uvicorn>=0.38.0",
    "wordcloud>=1.9.4",
]
