[project]
name = "OpinionLens"
version = "0.0.2"
description = "AI-powered sentiment analysis with reproducible models and scalable deployment."
readme = "README.md"
requires-python = ">=3.13.3"
authors = [{ name = "Abdelaziz W. Farahat" }]
dependencies = [
    "fastapi[standard]>=0.123.5",
    "mlflow>=3.6.0",
    "nltk>=3.9.2",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "optuna>=4.6.0",
    "wordcloud>=1.9.4",
]
test = [
    "pytest>=9.0.2",
    "requests>=2.32.5",
]

[project.scripts]
preprocess_data = "opinionlens.preprocessing.scripts.preprocess_data:main"
vectorize_data = "opinionlens.preprocessing.scripts.vectorize_data:main"
baselines = "opinionlens.training.baselines:main"
train_sklearn = "opinionlens.training.train_sklearn:main"
tune_sklearn = "opinionlens.training.tune_sklearn:main"
register_model = "opinionlens.training.register_model:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
