[project]
name = "OpinionLens"
version = "0.0.4"
description = "AI-powered sentiment analysis with reproducible models and scalable deployment."
readme = "README.md"
requires-python = ">=3.13.3"
authors = [{ name = "Abdelaziz W. Farahat" }]
dependencies = [
    "fastapi[standard]>=0.123.5",
    "mlflow[auth]>=3.6.0",
    "nltk>=3.9.2",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic-settings>=2.12.0",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "optuna>=4.6.0",
    "pre-commit>=4.5.1",
    "wordcloud>=1.9.4",
]
test = ["httpx>=0.28.1", "locust>=2.42.6", "pytest>=9.0.2"]

[project.scripts]
preprocess_data = "opinionlens.preprocessing.scripts.preprocess_data:main"
vectorize_data = "opinionlens.preprocessing.scripts.vectorize_data:main"
baselines = "opinionlens.training.baselines:main"
train_sklearn = "opinionlens.training.train_sklearn:main"
tune_sklearn = "opinionlens.training.tune_sklearn:main"
evals = "opinionlens.training.evals:main"

register_model = "opinionlens.scripts.register_model:main"
push_objects = "opinionlens.scripts.push_objects:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
